Closed
Bug 615666
Opened 11 years ago
Closed 11 years ago
SMIL animation does not work with percent units for "offset" attr on <stop> elements
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: marek.raida, Assigned: longsonr)
References
()
Details
Attachments
(3 files)
518 bytes,
image/svg+xml
|
Details | |
516 bytes,
image/svg+xml
|
Details | |
20.79 KB,
patch
|
jwatt
:
review+
roc
:
approval2.0+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101130 Firefox/4.0b8pre Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101130 Firefox/4.0b8pre SMIL animation units does not support percents and must be converted to floats to work. I found many animation related unit issues but not identified exactly this one,so sorry, if it is duplicity of some other bug, I;m creating it to be sure to have it fixed... Reproducible: Always Steps to Reproduce: 1. Open enclosed testcase 2. Gradient of the circle seems static, but should be animated Actual Results: static rendering Expected Results: animation of stop color of radial gradient according to spec and other browser implementation, percents should behave in exactly the same way as floating units (in other testcase)
Reporter | ||
Comment 1•11 years ago
|
||
Reporter | ||
Comment 2•11 years ago
|
||
Comment 3•11 years ago
|
||
Confirmed in today's nightly. Mozilla/5.0 (X11; Linux x86_64; rv:2.0b8pre) Gecko/20101130 Firefox/4.0b8pre (Updating summary -- the testcase shows that this is broken for the <stop> "offset" attribute, but percent units generally work fine for other attributes, e.g. CSS-backed attributes.)
OS: Windows 7 → All
Hardware: x86 → All
Summary: SMIL animation does not work with percent units → SMIL animation does not work with percent units for "offset" attr on <stop> elements
Version: unspecified → Trunk
Updated•11 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•11 years ago
|
blocking2.0: --- → ?
![]() |
||
Comment 4•11 years ago
|
||
I don't think it should block since you can use 0.xx instead of xx%, but it would be nice to fix. Problem is the parsing code doesn't know whether it should be allowing the <number> it is parsing to be followed by a "%" or not.
Assignee | ||
Comment 5•11 years ago
|
||
We could add a PRPackedBool mPercentagesAllowed to the NumberInfo struct in nsSVGElement.h and just read that off in nsSVGNumber2::SMILNumber::ValueFromString
![]() |
||
Comment 6•11 years ago
|
||
Sounds like a plan. :)
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → longsonr
Assignee | ||
Comment 7•11 years ago
|
||
Attachment #495251 -
Flags: review?(jwatt)
![]() |
||
Comment 8•11 years ago
|
||
Comment on attachment 495251 [details] [diff] [review] patch Nice. :) r=jwatt
Attachment #495251 -
Flags: review?(jwatt) → review+
![]() |
||
Updated•11 years ago
|
Attachment #495251 -
Flags: approval2.0?
![]() |
||
Updated•11 years ago
|
blocking2.0: ? → ---
Assignee | ||
Updated•11 years ago
|
Whiteboard: [need approval]
Comment on attachment 495251 [details] [diff] [review] patch > IsPercentagesAllowedNumber NumberAllowsPercentages sounds better
Attachment #495251 -
Flags: approval2.0? → approval2.0+
![]() |
||
Comment 10•11 years ago
|
||
(In reply to comment #9) > NumberAllowsPercentages sounds better I was going to remark on that in my review but decided not to bother. Given your comment I changed it to NumberAttrAllowsPercentage for checkin though. Pushed http://hg.mozilla.org/mozilla-central/rev/b1a4d82fb98a
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [need approval]
Assignee | ||
Updated•10 years ago
|
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•