Bug 615666 - SMIL animation does not work with percent units for "offset" attr on <stop> elements. r=jwatt a=roc